<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/currentAlbumImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/active_album"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                android:minWidth="150dp"
                android:minHeight="150dp"

                android:padding="8dp"

                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/curved_shapeA"
                app:srcCompat="@drawable/ic_baseline_music_splash"
                app:strokeColor="@color/mainPrimaryColor"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentSongA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/current_song"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentSongA">

                <TextView
                    android:id="@+id/albumNameA"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/song_albulm"
                    android:layout_weight=".9"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/favouriteA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:layout_gravity="center"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/favourites"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startA"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/song_start"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:progressBackgroundTint="@color/mainPrimaryColor"
                    android:progressTint="#38DF0A"
                    android:thumbTint="#38DF0A"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/endA"
                    app:layout_constraintStart_toEndOf="@+id/startA"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/endA"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/song_end"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/repeatA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/repeat_icon"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/previousA"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_repeat_24" />

                <ImageView
                    android:id="@+id/previousA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/previous_icon"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/playA"
                    app:layout_constraintStart_toEndOf="@+id/repeatA"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

                <ImageView
                    android:id="@+id/playA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/play_icon"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/nextA"
                    app:layout_constraintStart_toEndOf="@+id/previousA"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_play_circle_filled_24" />

                <ImageView
                    android:id="@+id/nextA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/next_icon"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/shuffleA"
                    app:layout_constraintStart_toEndOf="@+id/playA"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_skip_next_24" />

                <ImageView
                    android:id="@+id/shuffleA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/shuffle_icon"
                    android:focusable="true"
                    android:minHeight="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nextA"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_shuffle_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/alarmA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/timer"
                android:focusable="true"
                android:minHeight="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equalizerA"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_alarm_24" />

            <ImageView
                android:id="@+id/equalizerA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/equalizer"
                android:focusable="true"
                android:minHeight="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shareA"
                app:layout_constraintStart_toEndOf="@+id/alarmA"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_graphic_eq_24" />

            <ImageView
                android:id="@+id/shareA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/share"
                android:focusable="true"
                android:minHeight="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/equalizerA"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_share_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>