<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/mins_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/minutes_10"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/mainPrimaryColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:text="@string/minutes_10"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mins_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/mainPrimaryColor"
            android:layout_margin="8dp"
            android:contentDescription="@string/minutes_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:text="@string/minutes_20"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mins_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/mainPrimaryColor"
            android:layout_margin="8dp"
            android:contentDescription="@string/minutes_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:text="@string/minutes_30"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
        

</LinearLayout>