<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:shapeAppearanceOverlay="@style/curved_shape"
    app:strokeColor="@color/mainPrimaryColor"
    app:strokeWidth="1dp"
    android:padding="2dp"
    android:layout_marginBottom="2dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/albumImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/curved_shape"
            app:srcCompat="@drawable/player_icon" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toEndOf="@+id/albumImage"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/song_name"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/albumName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/albumName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/song_album_name"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/songName" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/song_length" />

            <ImageView
                android:id="@+id/moreOptions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/more_options"
                app:srcCompat="@drawable/ic_baseline_more_vert_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>