<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/fragmentShape"
    tools:context=".CurrentPlayingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragmentAlbumImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/curved_shape"
            app:srcCompat="@drawable/player_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragmentAlbumImage"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fragmentSongName"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/current_playing_song_f"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentPlay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/fragmentPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_baseline_play_circle_filled_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentNext"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/fragmentplaybutton" />

                <ImageView
                    android:id="@+id/fragmentNext"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_baseline_skip_next_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/fragmentnextbutton" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>